--- a/boomi-network.jinja
+++ b/boomi-network.jinja
@@ -65,3 +65,18 @@ resources:
     allowed:
     - IPProtocol: ICMP
       ports: []
+
+- name: {{ deployment }}-{{ region }}-cloud-router
+  type: compute.v1.router
+  properties:
+    name: {{ deployment }}-{{ region }}-cloud-router
+    description: route with default internet gateway
+    network: {{ properties["network"] }}
+    region: {{ region }}
+    nats:
+    - name: {{ env["name"] }}-{{ region }}-nat
+      natIpAllocateOption: "AUTO_ONLY"
+      sourceSubnetworkIpRangesToNat: "LIST_OF_SUBNETWORKS"
+      subnetworks: 
+      - name: {{ privateSubnetCIDR }}
+        sourceIpRangesToNat: ["PRIMARY_IP_RANGE"]
