--- a/boomi-network.jinja
+++ b/boomi-network.jinja
@@ -19,7 +19,7 @@ resources:
 - name: {{ publicSubnet }}
   type: compute.v1.subnetwork
   properties:
-    name: publicSubnet
+    name: {{ publicSubnet }}
     network: $(ref.{{ vpcName }}.selfLink)
     ipCidrRange: {{ publicSubnetCIDR }}
     region: {{ region }}
@@ -28,7 +28,7 @@ resources:
 - name: {{ privateSubnet }}
   type: compute.v1.subnetwork
   properties:
-    name: privateSubnet
+    name: {{ privateSubnet }}
     network: $(ref.{{ vpcName }}.selfLink)
     ipCidrRange: {{ privateSubnetCIDR }}
     region: {{ region }}
@@ -66,3 +66,17 @@ resources:
     - IPProtocol: ICMP
       ports: []
 
+- name: {{ deployment }}-{{ region }}-cloud-router
+  type: compute.v1.router
+  properties:
+    name: {{ deployment }}-{{ region }}-cloud-router
+    description: route with default internet gateway
+    network: $(ref.{{ vpcName }}.selfLink)
+    region: {{ region }}
+    nats:
+    - name: {{ env["name"] }}-{{ region }}-nat
+      natIpAllocateOption: "AUTO_ONLY"
+      sourceSubnetworkIpRangesToNat: "LIST_OF_SUBNETWORKS"
+      subnetworks: 
+      - name: $(ref.{{ privateSubnet }}.selfLink)
+        sourceIpRangesToNat: ["PRIMARY_IP_RANGE"]
