--- a/config.jinja
+++ b/config.jinja
@@ -1,5 +1,5 @@
 resources:
-- name: boomi-gke-network
+- name: boomi-network
   type: boomi-network.jinja
   properties:
     region: {{ properties["region"] }}
