reformated the files

--- a/config.jinja
+++ b/config.jinja
@@ -1,5 +1,5 @@
 resources:
-- name: boomi-network
-  type: boomi-network.jinja
+- name: boomi-gke-network
+  type: network.jinja
   properties:
     region: {{ properties["region"] }}
