--- a/config.jinja
+++ b/config.jinja
@@ -3,3 +3,9 @@ resources:
   type: network.jinja
   properties:
     region: {{ properties["region"] }}
+
+- name: boomi-gke-bastion
+  type: bastion.jinja
+  properties:
+    region: {{ properties["region"] }}
+    zone: {{ properties["zone"] }}
