added bastion host

--- a/config.jinja
+++ b/config.jinja
@@ -9,3 +9,6 @@ resources:
   properties:
     region: {{ properties["region"] }}
     zone: {{ properties["zone"] }}
+  metadata:
+    dependsOn:
+      - boomi-gke-network
