added bastion host

--- a/config.jinja
+++ b/config.jinja
@@ -7,18 +7,18 @@ resources:
 - name: boomi-gke-network
   type: network.jinja
   properties:
-    region: properties["region"]
+    region: {{ properties["region"] }}
     publicSubnetCIDR: {{ privateSubnetCIDR }}
     privateSubnetCIDR: {{ privateSubnetCIDR }}
 
 - name: boomi-gke-bastion
   type: bastion.jinja
   properties:
-    region: properties["region"]
-    zone: properties["zone"]
-    machineType: properties["machineType"]
-    machineImage: properties["machineImage"]
-    targetSize: properties["targetSize"]
+    region: {{ properties["region"] }}
+    zone: {{ properties["zone"] }}
+    machineType: {{ properties["machineType"] }}
+    machineImage: {{ properties["machineImage"] }}
+    targetSize: {{ properties["targetSize"] }}
   metadata:
     dependsOn:
       - boomi-gke-network
