Added gke cluster

--- a/config.jinja
+++ b/config.jinja
@@ -1,24 +1,69 @@
 {% set project = env["project"] %}
 {% set deployment = env["deployment"] %}
+{% set REGION = properties["region"] %}
+{% set VPC_NAME = "%s-gke-network" % env["deployment"] %}
+{% set PUBLIC_SUBNET_NAME = "public" %}
+{% set PRIVATE_SUBNET_NAME = "private" %}
 {% set publicSubnetCIDR = properties["publicSubnetCIDR"] %}
 {% set privateSubnetCIDR = properties["privateSubnetCIDR"] %}
+
 
 resources:
 - name: boomi-gke-network
   type: network.jinja
   properties:
-    region: {{ properties["region"] }}
+    region: {{ REGION }}
+    vpcName: {{ VPC_NAME }}
+    publicSubnetName: {{ PUBLIC_SUBNET_NAME }}
+    privateSubnetName: {{ PRIVATE_SUBNET_NAME }}
     publicSubnetCIDR: {{ publicSubnetCIDR }}
     privateSubnetCIDR: {{ privateSubnetCIDR }}
 
-- name: boomi-gke-bastion
+- name: boomi-bastion
   type: bastion.jinja
   properties:
-    region: {{ properties["region"] }}
+    region: {{ REGION }}
     zone: {{ properties["zone"] }}
+    network: $(ref.{{ VPC_NAME }}.selfLink)
+    subnet: $(ref.{{ PUBLIC_SUBNET_NAME }}.selfLink)
     machineType: {{ properties["machineType"] }}
     machineImage: {{ properties["machineImage"] }}
     targetSize: {{ properties["targetSize"] }}
   metadata:
     dependsOn:
       - boomi-gke-network
+
+- name: boomi-gke-cluster
+  type: gke-cluster.jinja
+  properties:
+    region: {{ properties["region"] }}
+    zone: {{ properties["zone"] }}
+    network: $(ref.{{ VPC_NAME }}.selfLink)
+    subnet: $(ref.{{ PRIVATE_SUBNET_NAME }}.selfLink)
+
+    # Set this to v1beta1 to use beta features such as private clusters
+    gkeApiVersion: {{ properties["gkeApiVersion"] }}
+    pool-version: v1
+
+    # Whether to deploy the new Stackdriver Kubernetes agents
+    stackdriver-kubernetes: false
+
+    desiredNodeCount: {{ properties["desiredNodeCount"] }}
+    minNodeCount: {{ properties["minNodeCount"] }}
+    maxNodeCount: {{ properties["maxNodeCount"] }}
+
+    gkeMachineType: {{ properties["gkeMachineType"] }}
+
+    securityConfig:
+      privatecluster: {{ properties["privatecluster"] }}
+      masterIpv4CidrBlock: 172.16.0.16/28
+      secureNodeMetadata: true
+      podSecurityPolicy: true
+      masterAuthorizedNetworksConfig:
+        cidrBlocks:
+        - cidrBlock: 1.2.3.4/32
+        - cidrBlock: 5.6.7.8/32
+        enabled: true
+  metadata:
+    dependsOn:
+      - boomi-bastion
