--- a/config.jinja
+++ b/config.jinja
@@ -67,3 +67,9 @@ resources:
   metadata:
     dependsOn:
       - boomi-bastion
+
+- name: boomi-gke-secret
+  type: secret.jinja
+  metadata:
+    dependsOn:
+      - boomi-gke-cluster
