--- a/templates/boomi-deployment/secret.jinja
+++ b/templates/boomi-deployment/secret.jinja
@@ -1,7 +1,16 @@
+{% set project = env["project"] %}
+{% set deployment = env["deployment"] %}
+{% set region = properties["region"] %}
+{% set CLUSTER_NAME = deployment + '-gke-cluster' %}
+
+{% set TYPE_NAME = deployment + '-type' %}
+{% set RBAC_TYPE_NAME = TYPE_NAME + '-rbac-v1' %}
+{% set APPS_TYPE_NAME = TYPE_NAME + '-apps-v1' %}
+
 {% set COLLECTION_PREFIX = '/api/v1/namespaces/{namespace}/' %}
 {% set NAMESPACE_COLLECTION = '/api/v1/namespaces/{name}' %}
 {% set CM_COLLECTION = COLLECTION_PREFIX + 'configmaps' %}
-{% set SECRET_COLLECTION = COLLECTION_PREFIX + 'secrets' %}
+{% set SECRET_COLLECTION = COLLECTION_PREFIX + 'secrets/{name}' %}
 {% set RC_COLLECTION = COLLECTION_PREFIX + 'replicationcontrollers' %}
 {% set SERVICE_COLLECTION = COLLECTION_PREFIX + 'services' %}
 {% set PVC_COLLECTION = COLLECTION_PREFIX + 'persistentvolumeclaims' %}
@@ -18,6 +27,6 @@
       name: boomi-secret
     type: Opaque
     stringData:
-    username: abcde
-    password: abcde
-    account: abcde
+      username: abcde
+      password: abcde
+      account: abcde
