--- a/templates/boomi-deployment/secret.jinja
+++ b/templates/boomi-deployment/secret.jinja
@@ -1,7 +1,5 @@
 {% set project = env["project"] %}
 {% set deployment = env["deployment"] %}
-{% set region = properties["region"] %}
-{% set CLUSTER_NAME = deployment + '-gke-cluster' %}
 
 {% set TYPE_NAME = deployment + '-type' %}
 {% set RBAC_TYPE_NAME = TYPE_NAME + '-rbac-v1' %}
@@ -17,6 +15,7 @@
 {% set STATEFULSETS_COLLECTION = '/apis/apps/v1/namespaces/{namespace}/statefulsets' %}
 {% set CLUSTER_ROLE_BINDING_COLLECTION = '/apis/rbac.authorization.k8s.io/v1/clusterrolebindings' %}
 
+resources:
 {#  Secret for bootstrapper. #}
 - name: boomi-Secret
   type: {{ env['project'] }}/$(ref.{{ TYPE_NAME }}.name):{{ SECRET_COLLECTION }}
