--- a/templates/boomi-deployment/secret.jinja
+++ b/templates/boomi-deployment/secret.jinja
@@ -8,7 +8,7 @@
 {% set COLLECTION_PREFIX = '/api/v1/namespaces/{namespace}/' %}
 {% set NAMESPACE_COLLECTION = '/api/v1/namespaces/{name}' %}
 {% set CM_COLLECTION = COLLECTION_PREFIX + 'configmaps' %}
-{% set SECRET_COLLECTION = COLLECTION_PREFIX + 'secrets/{name}' %}
+{% set SECRET_COLLECTION = COLLECTION_PREFIX + 'secrets' %}
 {% set RC_COLLECTION = COLLECTION_PREFIX + 'replicationcontrollers' %}
 {% set SERVICE_COLLECTION = COLLECTION_PREFIX + 'services' %}
 {% set PVC_COLLECTION = COLLECTION_PREFIX + 'persistentvolumeclaims' %}
