--- a/templates/kubernetes/gke-cluster.jinja
+++ b/templates/kubernetes/gke-cluster.jinja
@@ -153,10 +153,14 @@ resources:
         location: PATH
         methodMatch: ^(get|delete|put|patch|post)$
         value: $.ifNull($.resource.properties.metadata.name, $.resource.name)
-      - fieldName: metadata.name
+      - fieldName: namespace
+        location: PATH
+        methodMatch: ^(get|delete|put|patch|post)$
+        value: $.ifNull($.resource.properties.metadata.namespace, $.resource.name)
+      - fieldName: metadata.resourceVersion
         location: BODY
         methodMatch: ^(PUT|POST)$
-        value: $.ifNull($.resource.properties.metadata.name, $.resource.name)
+        value: $.ifNull($.resource.properties.metadata.resourceVersion, $.resource.name)
       - fieldName: Authorization
         location: HEADER
         value: >
