--- a/templates/boomi-deployment/secret.jinja
+++ b/templates/boomi-deployment/secret.jinja
@@ -16,6 +16,16 @@
 {% set CLUSTER_ROLE_BINDING_COLLECTION = '/apis/rbac.authorization.k8s.io/v1/clusterrolebindings' %}
 
 resources:
+
+- name: admin-namespace
+  type: {{ env['project'] }}/$(ref.{{ TYPE_NAME }}.name):{{ NAMESPACE_COLLECTION }}
+  properties:
+    apiVersion: v1
+    kind: Namespace
+    metadata:
+      name: kubeflow-admin
+    spec:
+    
 {#  Secret for bootstrapper. #}
 - name: boomi-Secret
   type: {{ env['project'] }}/$(ref.{{ TYPE_NAME }}.name):{{ SECRET_COLLECTION }}
