--- a/config.jinja
+++ b/config.jinja
@@ -50,6 +50,13 @@ resources:
         - cidrBlock: 1.2.3.4/32
         - cidrBlock: 5.6.7.8/32
         enabled: true
+        
+- name: file-store
+  type: file-store.jinja
+  properties:
+    zone: {{ properties["zone"] }}
+    network: $(ref.{{ VPC_NAME }}.selfLink)
+    size: 1024
 
 #- name: boomi-bastion
 #  type: bastion.jinja
