added file store

--- a/templates/cloud-storage/file-store.jinja
+++ b/templates/cloud-storage/file-store.jinja
@@ -6,7 +6,7 @@ resources:
 - name: {{ deployment + '-filestore' }}
   type: gcp-types/file-v1beta1:projects.locations.instances
   properties:
-    parent: {{ 'projects/isolated-project/locations/' + zone }}
+    parent: {{ 'projects/' + env["project"] + '/locations/' + zone }}
     # Any name of the instance would do
     instanceId: {{ deployment + '-filestore' }}
     tier: STANDARD
