added file store

--- a/templates/cloud-storage/file-store.jinja
+++ b/templates/cloud-storage/file-store.jinja
@@ -3,6 +3,13 @@
 {% set zone = properties["zone"] %}
 
 resources:
+
+- name: enable-filestore-api
+  action: 'gcp-types/servicemanagement-v1:servicemanagement.services.enable'
+  properties:
+    consumerId: {{ 'project:' + env['project'] }}
+    serviceName: file.googleapis.com
+
 - name: {{ deployment + '-filestore' }}
   type: gcp-types/file-v1beta1:projects.locations.instances
   properties:
@@ -16,3 +23,6 @@ resources:
     fileShares:
     - name: my_share
       capacityGb: {{ properties["size"] }}
+  metadata:
+    dependsOn:
+      - enable-filestore-api
