--- a/templates/cloud-storage/file-store.jinja
+++ b/templates/cloud-storage/file-store.jinja
@@ -21,7 +21,7 @@ resources:
     networks:
     - network: {{ properties["network"] }}
     fileShares:
-    - name: {{ deployment + '-file-share' }}
+    - name: {{ deployment + '-fs' }}
       capacityGb: {{ properties["size"] }}
   metadata:
     dependsOn:
