--- a/config.jinja
+++ b/config.jinja
@@ -72,3 +72,27 @@ resources:
 #    dependsOn:
 #      - boomi-gke-network
 #      - boomi-gke-cluster
+
+- name: mycloudbuild
+  type: build.py
+  properties:
+    steps:
+      - name: gcr.io/cloud-builders/git
+        args:
+          - clone
+          - 'https://github.com/GoogleCloudPlatform/cloud-builders'
+      - name: gcr.io/cloud-builders/docker
+        args:
+          - build
+          - '--tag=gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+          - .
+        dir: cloud-builders/npm/examples/hello_world
+      - name: gcr.io/cloud-builders/docker
+        args:
+          - push
+          - 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+    substitutions:
+      _IMAGE_NAME: npm-helloworld
+    images:
+      - 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+    timeout: 200s
