--- a/templates/boomi-deployment/secret.jinja
+++ b/templates/boomi-deployment/secret.jinja
@@ -2,26 +2,20 @@
 {% set deployment = env["deployment"] %}
 
 {% set TYPE_NAME = deployment + '-type' %}
-{% set RBAC_TYPE_NAME = TYPE_NAME + '-rbac-v1' %}
-{% set APPS_TYPE_NAME = TYPE_NAME + '-apps-v1' %}
 
-{% set COLLECTION_PREFIX = '/api/v1/namespaces/{namespace}/' %}
-{% set NAMESPACE_COLLECTION = '/api/v1/namespaces/{name}' %}
-{% set CM_COLLECTION = COLLECTION_PREFIX + 'configmaps' %}
-{% set SECRET_COLLECTION = COLLECTION_PREFIX + 'secrets' %}
-{% set RC_COLLECTION = COLLECTION_PREFIX + 'replicationcontrollers' %}
-{% set SERVICE_COLLECTION = COLLECTION_PREFIX + 'services' %}
-{% set PVC_COLLECTION = COLLECTION_PREFIX + 'persistentvolumeclaims' %}
-{% set STATEFULSETS_COLLECTION = '/apis/apps/v1/namespaces/{namespace}/statefulsets' %}
-{% set CLUSTER_ROLE_BINDING_COLLECTION = '/apis/rbac.authorization.k8s.io/v1/clusterrolebindings' %}
+{% set SECRET_COLLECTION = '/api/v1/namespaces/{namespace}/secrets/{name}' %}
 
 resources:
 
-- name: admin-namespace
-  type: {{ env['project'] }}/$(ref.{{ TYPE_NAME }}.name):{{ NAMESPACE_COLLECTION }}
+- name: default
+  type: {{ env['project'] }}/$(ref.{{ TYPE_NAME }}.name):{{ SECRET_COLLECTION }}
   properties:
     apiVersion: v1
-    kind: Namespace
+    kind: Secret
     metadata:
-      name: kubeflow-admin
-    spec:
+      name: boomi-secret
+    type: Opaque
+    stringData:
+      username: abc
+      password: abc
+      account: abc
